# mg5-crossec-course

./: .gitignore  CMakeLists.txt  INSTALLATION_TUTORIAL.md  README.md  run_ee_aa_LO.mg5
include/: BasicReadLHE.hpp
scripts/: basic_read_lhe.py
src/: BasicReadLHE.cpp
